--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,8 @@ services:
         soft: -1
         hard: -1
     mem_limit: 1g
-    ports: 9200:9200
+    ports: 
+      - 9200:9200
     restart: always
 
   # Graylog: https://hub.docker.com/r/graylog/graylog/
