--- a/ansible/Graylog/tasks/main.yml
+++ b/ansible/Graylog/tasks/main.yml
@@ -9,7 +9,7 @@
   git:
     repo: https://github.com/Projet-Automation-Infra-SI-Ynov/Graylog.git
     dest: /home/administrateur/graylog
-    version: develop
+    version: master
 
 - name: Add Registry IP in daemon.json
   shell: sed -i 's/IP_REGISTRY/REGISTRY2/g' /home/administrateur/graylog/daemon.json
