--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,32 @@ services:
       # GELF UDP
       - 12201:12201/udp
 
+  # telegraf:
+  #   image: telegraf
+  #   container_name: telegraf
+  #   restart: always
+  #   volumes:
+  #   - ./telegraf.conf:/etc/telegraf/telegraf.conf:ro
+  #   depends_on:
+  #     - influxdb
+  #   links:
+  #     - influxdb
+  #   ports:
+  #   - '8125:8125'
+
+  # influxdb:
+  #   image: influxdb:1.8-alpine
+  #   container_name: influxdb
+  #   restart: always
+  #   environment:
+  #     - INFLUXDB_DB=influx
+  #     - INFLUXDB_ADMIN_USER=admin
+  #     - INFLUXDB_ADMIN_PASSWORD=admin
+  #   ports:
+  #     - '8086:8086'
+  #   volumes:
+  #     - ./influxdb:/var/lib/influxdb
+
 # Volumes for persisting data, see https://docs.docker.com/engine/admin/volumes/volumes/
 volumes:
   mongo_data:
